--- a/Phase5/WebForms/Web.config
+++ b/Phase5/WebForms/Web.config
@@ -18,6 +18,8 @@
     <authorization>
       <allow users="*" />
     </authorization>
+      <sessionState cookieless="true"
+        regenerateExpiredSessionId="true" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
