--- a/Phase5/WebForms/Web.config
+++ b/Phase5/WebForms/Web.config
@@ -18,7 +18,7 @@
     <authorization>
       <allow users="*" />
     </authorization>
-      <sessionState cookieless="true" regenerateExpiredSessionId="true" />
+    <sessionState cookieless="false" regenerateExpiredSessionId="true" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
