--- a/Phase6/MvcApplication/MvcApplication.csproj
+++ b/Phase6/MvcApplication/MvcApplication.csproj
@@ -130,15 +130,21 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HelloWorldController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProjectsController.cs" />
+    <Compile Include="Controllers\ResourcesController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Project.cs">
       <DependentUpon>TaskManagementModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.cs">
+      <DependentUpon>TaskManagementModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ResourceTask.cs">
       <DependentUpon>TaskManagementModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Task.cs">
@@ -150,14 +156,17 @@
       <DependentUpon>TaskManagementModel.Context.tt</DependentUpon>
     </Compile>
     <Compile Include="TaskManagementModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
       <DependentUpon>TaskManagementModel.tt</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="TaskManagementModel.Designer.cs">
-      <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
       <DependentUpon>TaskManagementModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="TaskPredecessor.cs">
+      <DependentUpon>TaskManagementModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -187,10 +196,13 @@
       <DependentUpon>TaskManagementModel.edmx</DependentUpon>
       <LastGenOutput>TaskManagementModel.Context.cs</LastGenOutput>
     </Content>
+    <Content Include="TaskManagementModel.edmx.diagram">
+      <DependentUpon>TaskManagementModel.edmx</DependentUpon>
+    </Content>
     <Content Include="TaskManagementModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>TaskManagementModel.edmx</DependentUpon>
       <LastGenOutput>TaskManagementModel.cs</LastGenOutput>
+      <DependentUpon>TaskManagementModel.edmx</DependentUpon>
     </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -207,18 +219,27 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\HelloWorld\Index.cshtml" />
-    <EntityDeploy Include="TaskManagementModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>TaskManagementModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="TaskManagementModel.edmx.diagram">
-      <DependentUpon>TaskManagementModel.edmx</DependentUpon>
-    </Content>
     <Content Include="Views\Tasks\Create.cshtml" />
     <Content Include="Views\Tasks\Delete.cshtml" />
     <Content Include="Views\Tasks\Details.cshtml" />
     <Content Include="Views\Tasks\Edit.cshtml" />
     <Content Include="Views\Tasks\Index.cshtml" />
+    <Content Include="Views\Projects\Create.cshtml" />
+    <Content Include="Views\Projects\Delete.cshtml" />
+    <Content Include="Views\Projects\Details.cshtml" />
+    <Content Include="Views\Projects\Edit.cshtml" />
+    <Content Include="Views\Projects\Index.cshtml" />
+    <Content Include="Views\Resources\Create.cshtml" />
+    <Content Include="Views\Resources\Delete.cshtml" />
+    <Content Include="Views\Resources\Details.cshtml" />
+    <Content Include="Views\Resources\Edit.cshtml" />
+    <Content Include="Views\Resources\Index.cshtml" />
+    <Content Include="Views\Projects\Choose.cshtml" />
+    <Content Include="Views\Projects\Unchoose.cshtml" />
+    <EntityDeploy Include="TaskManagementModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>TaskManagementModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
