--- a/Phase6/MvcApplication/MvcApplication.csproj
+++ b/Phase6/MvcApplication/MvcApplication.csproj
@@ -225,13 +225,6 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\HelloWorld\Index.cshtml" />
-    <Content Include="Views\Resources Template\Create.cshtml" />
-    <Content Include="Views\Resources Template\Delete.cshtml" />
-    <Content Include="Views\Resources Template\Details.cshtml" />
-    <Content Include="Views\Resources Template\Edit.cshtml" />
-    <Content Include="Views\Resources Template\Index.cshtml" />
-    <Content Include="Views\Projects\Choose.cshtml" />
-    <Content Include="Views\Projects\Unchoose.cshtml" />
     <Content Include="Views\Tasks\Create.cshtml" />
     <Content Include="Views\Tasks\Delete.cshtml" />
     <Content Include="Views\Tasks\Details.cshtml" />
@@ -256,6 +249,8 @@
     <Content Include="Views\Resources\Index.cshtml" />
     <Content Include="Views\Tasks\AssignResource.cshtml" />
     <Content Include="Views\Tasks\ViewResources.cshtml" />
+    <Content Include="Views\Tasks\DeassignResource.cshtml" />
+    <Content Include="Views\Resources\ViewTasks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
